--- a/笔记/做空.md
+++ b/笔记/做空.md
@@ -1,16 +1,32 @@
 ### 做空是什么
     特点：无限的损失
+        有限的收益，无限的损失
     例子：Jim Chanos
-
-    策略一：多空策略
-    例子：老罗与老虎基金
-
-    策略二：发研究报告
-    例子：浑水
-    
+        成功案例
+            安然财务作假，抓到漏洞之后做空，一个案子赚了5亿美金，之后还做空了瑞星咖啡，还又德国一个公司Wirecard，都是涉及金融骗局，还有一个美国的租车公司Hertz。
+        失败案例
+            特斯拉
+            从16年建仓做空到离场，特斯拉股票翻了18倍，他自己有个原则就是：任何一只个股在他的投资组合里的比重不会超过5%。特斯拉是有史以来被做空的最多的一只股票。到2020年总共做空特斯拉的人一共的亏损达到了400亿。
+    策略一：多空策略(long-short strategy)
+        就是在做空一只股票的时候同时做多一个大盘的股指期货
+    例子：老罗与老虎基金(Julian Robertson)
+        成功
+            15年间，从800W一直使用多空策略赚到70个亿
+        失败
+            1995年开始使用多空策略，做空互联网企业，做多蓝筹股，遇到互联网爆发，股价疯涨，市场上的模型已经解释不了价值了，市场要重新计算客户的增长指数来给企业估值，此时的投资者觉得互联网行业是未来，就撤资了，老虎基金资金链从210亿缩减到7亿，一直撑到2000年坚持不下去了，就把老虎基金关了。关了之后半年，因为所有的资金都在股市了，没有新的用户保持活性，纳斯达克指数在一年以内暴跌75%。这时人们才意识到这个是泡沫（Dot Com Bubble）。总结，方向是对的，同时也要找准时机
+    策略二：做空机构（发研究报告）
+        找有缝的鸡蛋，鸡蛋里挑骨头放大，数据造假是非常严重的污点
+    例子：浑水（Muddy Waer Research）
+            创始人卡尔森-布洛克（Carson Block）创立是源于偶然，一开始是看到了一个叫东方纸业的公司在每股上市了，财报做的很漂亮，经过实地观察之后发现与财报严重不符，决定做空，在2010年6月底发布了一个30+页的报告，09年的时候营业额夸大40倍，并公开表明做空了东方纸业，接下来两天，股票就下跌了50%
+            2010.11做空绿诺国际     退市
+            2011.02做空中国高速频道 退市
+            2011.01做空多元环球水务 退市
+            流程：秘密走访》财务调查》做空》发报告》股价跌》获利平仓》走人
     专门做空公司的限制
         LLL原则
-
+            大的（Large）因为体量足够大才能赚到钱
+            流动性好（Liquid）做空借股票是有成本的，所以需要该公司的股票流动性好，可以控制成本
+            存在欺诈（Lying）公司必须存在欺诈行为
     策略三：资本攻击
     例子：大空头
         杰西-利佛摩尔
@@ -32,6 +48,8 @@
         北大平洋铁路公司(争夺控制权)
             E.H.Harriman
             James Hill
-            神仙打架哎，割空投韭菜
+            两个人想争夺公司的控制权。从1901年三四月份开始买入公司股票，导致股票从20上涨到130，做空机构评估股价虚高，开始做空，但是他们是想争夺控制权，导致市场上没有股票买，价格一直在上涨，空投亏损严重，中介让空投交保证金，中介就卖了股票补亏空，结果：神仙打架哎，割空投韭菜
     道德压力
+        是指做空机构要面对的对手太多，在道德上要面对很大的压力
     结尾总结
+        做空的方式有很多，还可以做空期权，做空股指期货，共同基金，保险，养老金是不允许做空的。
